[package]
name = "oauth-blob"
version = "0.1.0"
edition = "2024"

[dependencies]
openidconnect = "4.0.1"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["console"] }


[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
