[package]
name = "oauth-blob"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["console"] }

#openidconnect = "4.0.1"
github-device-oauth = { git = "https://github.com/druskus20/github-device-oauth", branch = "master" }
js-sys = "0.3.82"
wasm-bindgen-futures = "0.4.55"
